refactoring locales reducer, start make Unit Tests

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="generator umowy cg-olimpic"
-      content="Ta aplikacja służy do generowania umowy pomiędzy klientem a cg-olimpic"
-    />
+    <meta name="generator umowy cg-olimpic" content="Ta aplikacja służy do generowania umowy pomiędzy klientem a cg-olimpic"/>
+    <meta name="description" content="Ta aplikacja przeznaczona dla przyszłych klientów CG Olimpic, które chcą podpisać umowę elektroniczną"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Generator Umowy CG-Olimpic</title>
